Used Classlist toggle method for changing the background color

--- a/DOM/EventListener.html
+++ b/DOM/EventListener.html
@@ -2,6 +2,11 @@
 <html>
 <head>
     <title>Event Listener</title>
+    <style type="text/css">
+        .purple{
+            background: purple;
+        }
+    </style>
 </head>
 <body>
     <button>Click Me !!</button>
