--- a/Todos/todos.html
+++ b/Todos/todos.html
@@ -2,19 +2,21 @@
 <html>
 <head>
     <title>Todos</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/todos.css">
-    <script type="text/javascript" src="assets/js/lib/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets\css\todos.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <script type="text/javascript" src="assets\js\lib\jquery-3.4.1.min.js"></script>
 </head>
 <body>
     <div id="container">
-        <h1>To-do List</h1>
-        <input type="text">
+        <h1>To-Do List <i class="fa fa-plus"></i> </h1>
+        <input type="text" placeholder="Add New todo">
         <ul>
-            <li><span>X</span> Feed Feleena</li>
-            <li><span>X</span> Complete this course</li>
-            <li><span>X</span> Go to park</li>
+            <li><span><i class="fa fa-trash"></i></span>Feed Feleena</li>
+            <li><span><i class="fa fa-trash"></i></span>Complete this course</li>
+            <li><span><i class="fa fa-trash"></i></span>Conquor Passport</li>
         </ul>
     </div>
-    <script type="text/javascript" src="assets/js/todos.js"></script>
+    <script type="text/javascript" src="assets\js\todos.js"></script>
 </body>
 </html>
